force-app/main/default/objects/Sensor_de_Temperatura_e_Umidade__c/Sensor_de_Temperatura_e_Umidade__c.object-meta.xml
<CustomObject>
    <label>Sensor de Temperatura e Umidade</label>
    <nameField>
        <displayFormat>STU-{0000}</displayFormat>
        <label>Sensor de Temperatura e Umidade</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sensores de Temperatura e Umidade</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>