force-app/main/default/objects/Sensor_de_Temperatura_e_Umidade__c/fields/Atividade__c.field-meta.xml
<CustomField>
    <fullName>Atividade__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>