force-app/main/default/objects/Sensor_de_Temperatura_e_Umidade__c/fields/Data_da_ultima_calibra_o__c.field-meta.xml
<CustomField>
    <fullName>Data_da_ultima_calibra_o__c</fullName>
    <label>Data da ultima calibração</label>
    <type>Date</type>
</CustomField>