force-app/main/default/objects/Sensor_de_Temperatura_e_Umidade__c/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empresa</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Sensores_de_Temperatura_e_Humidade</relationshipName>
    <type>Lookup</type>
</CustomField>