force-app/main/default/objects/Sensor_de_Temperatura_e_Umidade__c/fields/Endere_o_MAC__c.field-meta.xml
<CustomField>
    <fullName>Endere_o_MAC__c</fullName>
    <label>Endereço MAC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>