force-app/main/default/objects/Sensor_de_Temperatura_e_Umidade__c/fields/M_nima_umidade__c.field-meta.xml
<CustomField>
    <fullName>M_nima_umidade__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Umidade mínima</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>