force-app/main/default/objects/Sensor_de_Temperatura_e_Umidade__c/fields/m_xima_umidade__c.field-meta.xml
<CustomField>
    <fullName>m_xima_umidade__c</fullName>
    <defaultValue>95</defaultValue>
    <label>Umidade máxima</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>