force-app/main/default/objects/Sensor_de_Temperatura_e_Umidade__c/fields/Temperatura__c.field-meta.xml
<CustomField>
    <fullName>Temperatura__c</fullName>
    <defaultValue>40</defaultValue>
    <inlineHelpText>Preencha com o valor máximo de temperatura que o ambiente pode atingir. Ao atingir essa temperatura, será enviado um alerta para o departamento de Qualidade</inlineHelpText>
    <label>Temperatura máxima</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>