force-app/main/default/objects/Sensor_de_Temperatura_e_Umidade__c/fields/Temperatura_m_nima__c.field-meta.xml
<CustomField>
    <fullName>Temperatura_m_nima__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Preencha com o valor mínimo de temperatura  que o ambiente pode atingir. Ao atingir essa temperatura, será enviado um alerta para o departamento de Qualidade</description>
    <label>Temperatura mínima</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>