force-app/main/default/objects/Sensor_de_Temperatura_e_Umidade__c/fields/Temperatura_registrada__c.field-meta.xml
<CustomField>
    <fullName>Temperatura_registrada__c</fullName>
    <inlineHelpText>Ultima temperatura registrada pelo sensor</inlineHelpText>
    <label>Temperatura</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>