force-app/main/default/objects/Sensor_de_Temperatura_e_Umidade__c/fields/Ultima_Atualiza_o_de_temperatura__c.field-meta.xml
<CustomField>
    <fullName>Ultima_Atualiza_o_de_temperatura__c</fullName>
    <label>Ultima Atualização de temperatura</label>
    <type>DateTime</type>
</CustomField>