force-app/main/default/objects/Sensor_de_Temperatura_e_Umidade__c/validationRules/ABC_MT.validationRule-meta.xml
<ValidationRule>
    <fullName>ABC_MT</fullName>
    <active>true</active>
    <errorConditionFormula>Empresa__c= &quot;0016e000036biMZ&quot; &amp;&amp;
(TEXT(Local_instalado__c) = &quot;Estoque 01&quot; &amp;&amp;
TEXT(Local_instalado__c) = &quot;Estoque 02&quot; &amp;&amp;
TEXT(Local_instalado__c) = &quot;Assistência Técnica&quot;)</errorConditionFormula>
    <errorDisplayField>Local_instalado__c</errorDisplayField>
    <errorMessage>Verifique se o local instalado existe na ABC_MT</errorMessage>
</ValidationRule>