force-app/main/default/objects/Sensor_de_Temperatura_e_Umidade__c/validationRules/ABC_TO.validationRule-meta.xml
<ValidationRule>
    <fullName>ABC_TO</fullName>
    <active>true</active>
    <errorConditionFormula>Empresa__c = &quot;0015A00002SZiBc&quot; &amp;&amp;
(TEXT(Local_instalado__c) = &quot;Estoque OPME&quot; &amp;&amp;
TEXT(Local_instalado__c) = &quot;Assistência Técnica	&quot; &amp;&amp;
TEXT(Local_instalado__c) = &quot;Estoque 01&quot;)</errorConditionFormula>
    <errorMessage>Verifique se o local instalado existe na ABC_TO</errorMessage>
</ValidationRule>