force-app/main/default/objects/Sensor_de_Temperatura_e_Umidade__c/validationRules/GDB.validationRule-meta.xml
<ValidationRule>
    <fullName>GDB</fullName>
    <active>true</active>
    <errorConditionFormula>Empresa__c = &quot;0015A00001yGbVZ&quot; &amp;&amp;
!(
TEXT(Local_instalado__c) = &quot;Assistência Técnica&quot; ||TEXT(Local_instalado__c) = &quot;Assistência Técnica 02&quot; ||
TEXT(Local_instalado__c) = &quot;Estoque 01&quot;||
TEXT(Local_instalado__c) = &quot;Estoque 02&quot;
)</errorConditionFormula>
    <errorMessage>Verifique se o local instalado existe na GDB</errorMessage>
</ValidationRule>