force-app/main/default/objects/Sensor_de_Temperatura_e_Umidade__c/validationRules/Health.validationRule-meta.xml
<ValidationRule>
    <fullName>Health</fullName>
    <active>true</active>
    <errorConditionFormula>Empresa__c = &quot;0015A00001tSrPa&quot; &amp;&amp;
(TEXT(Local_instalado__c) = &quot;Estoque 01&quot; &amp;&amp;
TEXT(Local_instalado__c) = &quot;Assistência Técnica	&quot; &amp;&amp;
TEXT(Local_instalado__c) = &quot;Metrologia&quot;)</errorConditionFormula>
    <errorDisplayField>Local_instalado__c</errorDisplayField>
    <errorMessage>Verifique se o local instalado existe na Health</errorMessage>
</ValidationRule>