force-app/main/default/objects/Sensor_de_Temperatura_e_Umidade__c/listViews/Sensores_Inativos.listView-meta.xml
<ListView>
    <fullName>Sensores_Inativos</fullName>
    <columns>NAME</columns>
    <columns>Empresa__c</columns>
    <columns>Local_instalado__c</columns>
    <columns>Temperatura_registrada__c</columns>
    <columns>Ultima_Atualiza_o_de_temperatura__c</columns>
    <columns>Endere_o_MAC__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Atividade__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Sensores Inativos</label>
</ListView>