force-app/main/default/objects/Sensor_de_Temperatura_e_Umidade__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Empresa__c</columns>
    <columns>Local_instalado__c</columns>
    <columns>Temperatura_registrada__c</columns>
    <columns>Ultima_Atualiza_o_de_temperatura__c</columns>
    <columns>Endere_o_MAC__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>